--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,7 +1,7 @@
 /******* Customized Bootstrap ********/
 
-$primary: #3CB815;
-$secondary: #F65005;
+$primary: #28a9e0;
+$secondary: #3161ab;
 $light: #F7F8FC;
 $dark: #111111;
 
