--- a/css/style.css
+++ b/css/style.css
@@ -116,19 +116,19 @@
 }
 
 .carousel-item .img1{
-background-image: url('\imgcrs\1.jpg');
+background-image: url(\imgcrs\1.jpg);
 width: 500px;
 height: 500px;
     position: absolute;
 }
 .carousel-item .img2{
-    background-image: url('\imgcrs\3.jpg');
+    background-image: url(\imgcrs\3.jpg);
     width: 500px;
     height: 500px;
     position: absolute;
 }
 .carousel-item .img3{
-    background-image: url('\imgcrs\5.jpg');
+    background-image: url(\imgcrs\5.jpg);
     width: 500px;
     height: 500px;
     position: absolute;
