--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,15 @@
     --light: #F7F8FC;
     --dark: #111111;
 }
-
+@font-face {
+    font-family: 'Pacifico';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Pacifico Regular'), local('Pacifico-Regular'),
+      url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2)
+        format('woff2');
+    font-display: swap;
+  }
 .back-to-top {
     position: fixed;
     display: none;
