--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -7,7 +7,7 @@ $dark: #111111;
 
 $font-family-base: 'Open Sans', sans-serif;
 
-$headings-font-family: 'Lora', serif;
+$headings-font-family: 'Lora';
 
 $body-color: #555555;
 
